docs(配置类): 源码阅读