@@ -6,6 +6,7 @@ import org.jetbrains.annotations.Nullable;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -21,9 +22,9 @@ public class DBUtil {
     private static final BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 
     static {
-        table.put("jack", List.of("jack", "123456", "ADMIN"));
-        table.put("rose", List.of("rose", "123456", "USER"));
-        table.put("tony", List.of("tony", "123456", "VISITOR"));
+        table.put("jack", Arrays.asList("jack", "123456", "ADMIN"));
+        table.put("rose", Arrays.asList("rose", "123456", "USER"));
+        table.put("tony", Arrays.asList("tony", "123456", "VISITOR"));
 
         document.put("jack", Member.builder().username("jack").password("123456").roles("ADMIN,USER").passwordEncoder(passwordEncoder::encode).build());
         document.put("rose", Member.builder().username("rose").password("123456").roles("USER").passwordEncoder(passwordEncoder::encode).build());
